set(BSD_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/freebsd)
set(BSD_SOURCE
    ${BSD_SOURCE_DIR}/sys/crypto/sha1.c
    #${BSD_SOURCE_DIR}/sys/crypto/siphash/siphash.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_descrip.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_event.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_fail.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_khelp.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_hhook.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_linker.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_mbuf.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_module.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_mtxpool.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_ntptime.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_osd.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_sysctl.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_tc.c
    ${BSD_SOURCE_DIR}/sys/kern/kern_uuid.c
    ${BSD_SOURCE_DIR}/sys/kern/link_elf.c
    ${BSD_SOURCE_DIR}/sys/kern/md5c.c
    ${BSD_SOURCE_DIR}/sys/kern/subr_capability.c
    ${BSD_SOURCE_DIR}/sys/kern/subr_counter.c
    ${BSD_SOURCE_DIR}/sys/kern/subr_eventhandler.c
    ${BSD_SOURCE_DIR}/sys/kern/subr_kobj.c
    ${BSD_SOURCE_DIR}/sys/kern/subr_lock.c
    ${BSD_SOURCE_DIR}/sys/kern/subr_module.c
    ${BSD_SOURCE_DIR}/sys/kern/subr_param.c
    ${BSD_SOURCE_DIR}/sys/kern/subr_pcpu.c
    ${BSD_SOURCE_DIR}/sys/kern/subr_sbuf.c
    ${BSD_SOURCE_DIR}/sys/kern/subr_taskqueue.c
    ${BSD_SOURCE_DIR}/sys/kern/subr_unit.c
    ${BSD_SOURCE_DIR}/sys/kern/subr_smr.c
    ${BSD_SOURCE_DIR}/sys/kern/sys_capability.c
    ${BSD_SOURCE_DIR}/sys/kern/sys_generic.c
    ${BSD_SOURCE_DIR}/sys/kern/sys_socket.c
    ${BSD_SOURCE_DIR}/sys/kern/uipc_accf.c
    ${BSD_SOURCE_DIR}/sys/kern/uipc_mbuf.c
    ${BSD_SOURCE_DIR}/sys/kern/uipc_mbuf2.c
    ${BSD_SOURCE_DIR}/sys/kern/uipc_domain.c
    ${BSD_SOURCE_DIR}/sys/kern/uipc_sockbuf.c
    ${BSD_SOURCE_DIR}/sys/kern/uipc_socket.c
    ${BSD_SOURCE_DIR}/sys/kern/uipc_syscalls.c
    ${BSD_SOURCE_DIR}/sys/kern/subr_filter.c

    ${BSD_SOURCE_DIR}/sys/amd64/amd64/in_cksum.c
    ${BSD_SOURCE_DIR}/sys/libkern/bcd.c
    ${BSD_SOURCE_DIR}/sys/libkern/gsb_crc32.c
    ${BSD_SOURCE_DIR}/sys/libkern/inet_ntoa.c
    ${BSD_SOURCE_DIR}/sys/libkern/jenkins_hash.c
    ${BSD_SOURCE_DIR}/sys/libkern/strlcpy.c
    ${BSD_SOURCE_DIR}/sys/libkern/strnlen.c
    ${BSD_SOURCE_DIR}/sys/libkern/arc4random_uniform.c

    ${BSD_SOURCE_DIR}/sys/net/bpf.c
    ${BSD_SOURCE_DIR}/sys/net/bridgestp.c
    ${BSD_SOURCE_DIR}/sys/net/if.c
    ${BSD_SOURCE_DIR}/sys/net/if_bridge.c
    ${BSD_SOURCE_DIR}/sys/net/if_clone.c
    ${BSD_SOURCE_DIR}/sys/net/if_dead.c
    ${BSD_SOURCE_DIR}/sys/net/if_ethersubr.c
    ${BSD_SOURCE_DIR}/sys/net/if_loop.c
    ${BSD_SOURCE_DIR}/sys/net/if_llatbl.c
    ${BSD_SOURCE_DIR}/sys/net/if_media.c
    ${BSD_SOURCE_DIR}/sys/net/if_spppfr.c
    ${BSD_SOURCE_DIR}/sys/net/if_spppsubr.c
    ${BSD_SOURCE_DIR}/sys/net/if_vlan.c
    ${BSD_SOURCE_DIR}/sys/net/if_vxlan.c
    ${BSD_SOURCE_DIR}/sys/net/netisr.c
    ${BSD_SOURCE_DIR}/sys/net/pfil.c
    ${BSD_SOURCE_DIR}/sys/net/radix.c
    ${BSD_SOURCE_DIR}/sys/net/raw_cb.c
    ${BSD_SOURCE_DIR}/sys/net/raw_usrreq.c
    ${BSD_SOURCE_DIR}/sys/net/route.c
    ${BSD_SOURCE_DIR}/sys/net/route/route_ctl.c
    ${BSD_SOURCE_DIR}/sys/net/route/route_tables.c
    ${BSD_SOURCE_DIR}/sys/net/route/route_helpers.c
    ${BSD_SOURCE_DIR}/sys/net/route/route_ifaddrs.c
    ${BSD_SOURCE_DIR}/sys/net/route/route_temporal.c
    ${BSD_SOURCE_DIR}/sys/net/route/nhop_utils.c
    ${BSD_SOURCE_DIR}/sys/net/route/nhop.c
    ${BSD_SOURCE_DIR}/sys/net/route/nhop_ctl.c
    ${BSD_SOURCE_DIR}/sys/net/rtsock.c
    ${BSD_SOURCE_DIR}/sys/net/slcompress.c
    ${BSD_SOURCE_DIR}/sys/net/if_gif.c

    ${BSD_SOURCE_DIR}/sys/netinet/in_fib.c
    ${BSD_SOURCE_DIR}/sys/netinet/in_gif.c
    ${BSD_SOURCE_DIR}/sys/netinet/ip_reass.c
    ${BSD_SOURCE_DIR}/sys/netinet/if_ether.c
    ${BSD_SOURCE_DIR}/sys/netinet/igmp.c
    ${BSD_SOURCE_DIR}/sys/netinet/in.c
    ${BSD_SOURCE_DIR}/sys/netinet/in_mcast.c
    ${BSD_SOURCE_DIR}/sys/netinet/in_pcb.c
    ${BSD_SOURCE_DIR}/sys/netinet/in_proto.c
    ${BSD_SOURCE_DIR}/sys/netinet/in_rmx.c
    ${BSD_SOURCE_DIR}/sys/netinet/ip_carp.c
    ${BSD_SOURCE_DIR}/sys/netinet/ip_divert.c
    ${BSD_SOURCE_DIR}/sys/netinet/ip_ecn.c
    ${BSD_SOURCE_DIR}/sys/netinet/ip_encap.c
    ${BSD_SOURCE_DIR}/sys/netinet/ip_fastfwd.c
    ${BSD_SOURCE_DIR}/sys/netinet/ip_icmp.c
    ${BSD_SOURCE_DIR}/sys/netinet/ip_id.c
    ${BSD_SOURCE_DIR}/sys/netinet/ip_input.c
    ${BSD_SOURCE_DIR}/sys/netinet/ip_mroute.c
    ${BSD_SOURCE_DIR}/sys/netinet/ip_options.c
    ${BSD_SOURCE_DIR}/sys/netinet/ip_output.c
    ${BSD_SOURCE_DIR}/sys/netinet/raw_ip.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_debug.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_hostcache.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_input.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_lro.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_offload.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_output.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_reass.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_sack.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_subr.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_syncache.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_timer.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_timewait.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_usrreq.c
    ${BSD_SOURCE_DIR}/sys/netinet/udp_usrreq.c
    ${BSD_SOURCE_DIR}/sys/netinet/cc/cc.c
    ${BSD_SOURCE_DIR}/sys/netinet/cc/cc_newreno.c
    ${BSD_SOURCE_DIR}/sys/netinet/cc/cc_htcp.c
    ${BSD_SOURCE_DIR}/sys/netinet/cc/cc_cubic.c
    ${BSD_SOURCE_DIR}/sys/netinet/libalias/alias.c
    ${BSD_SOURCE_DIR}/sys/netinet/libalias/alias_db.c
    ${BSD_SOURCE_DIR}/sys/netinet/libalias/alias_mod.c
    ${BSD_SOURCE_DIR}/sys/netinet/libalias/alias_proxy.c
    ${BSD_SOURCE_DIR}/sys/netinet/libalias/alias_sctp.c
    ${BSD_SOURCE_DIR}/sys/netinet/libalias/alias_util.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_hpts.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_ratelimit.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_stacks/sack_filter.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_stacks/rack_bbr_common.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_stacks/rack.c
    ${BSD_SOURCE_DIR}/sys/netinet/tcp_stacks/bbr.c

    ${BSD_SOURCE_DIR}/sys/netinet6/dest6.c
    ${BSD_SOURCE_DIR}/sys/netinet6/frag6.c
    ${BSD_SOURCE_DIR}/sys/netinet6/icmp6.c
    ${BSD_SOURCE_DIR}/sys/netinet6/in6.c
    ${BSD_SOURCE_DIR}/sys/netinet6/in6_ifattach.c
    ${BSD_SOURCE_DIR}/sys/netinet6/in6_mcast.c
    ${BSD_SOURCE_DIR}/sys/netinet6/in6_pcb.c
    ${BSD_SOURCE_DIR}/sys/netinet6/in6_pcbgroup.c
    ${BSD_SOURCE_DIR}/sys/netinet6/in6_proto.c
    ${BSD_SOURCE_DIR}/sys/netinet6/in6_rmx.c
    ${BSD_SOURCE_DIR}/sys/netinet6/in6_src.c
    ${BSD_SOURCE_DIR}/sys/netinet6/ip6_forward.c
    ${BSD_SOURCE_DIR}/sys/netinet6/ip6_id.c
    ${BSD_SOURCE_DIR}/sys/netinet6/ip6_input.c
    ${BSD_SOURCE_DIR}/sys/netinet6/ip6_fastfwd.c
    ${BSD_SOURCE_DIR}/sys/netinet6/ip6_mroute.c
    ${BSD_SOURCE_DIR}/sys/netinet6/ip6_output.c
    ${BSD_SOURCE_DIR}/sys/netinet6/mld6.c
    ${BSD_SOURCE_DIR}/sys/netinet6/nd6.c
    ${BSD_SOURCE_DIR}/sys/netinet6/nd6_nbr.c
    ${BSD_SOURCE_DIR}/sys/netinet6/nd6_rtr.c
    ${BSD_SOURCE_DIR}/sys/netinet6/raw_ip6.c
    ${BSD_SOURCE_DIR}/sys/netinet6/route6.c
    ${BSD_SOURCE_DIR}/sys/netinet6/scope6.c
    ${BSD_SOURCE_DIR}/sys/netinet6/send.c
    ${BSD_SOURCE_DIR}/sys/netinet6/udp6_usrreq.c
    ${BSD_SOURCE_DIR}/sys/netinet6/in6_cksum.c
    ${BSD_SOURCE_DIR}/sys/netinet6/in6_fib.c
    ${BSD_SOURCE_DIR}/sys/netinet6/in6_gif.c

    ${BSD_SOURCE_DIR}/sys/vm/uma_core.c

    ${CMAKE_CURRENT_SOURCE_DIR}/lib/lazybsd_veth.c
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/lazybsd_lock.c
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/lazybsd_patch.c
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/lazybsd_socket.c
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/lazybsd_kevent.c
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/lazybsd_kern_condvar.c
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/lazybsd_kern_timeout.c
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/lazybsd_kern_intr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/lazybsd_kern_subr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/lazybsd_kern_environment.c
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/lazybsd_kern_synch.c
)

add_library(freebsd STATIC ${BSD_SOURCE})

target_compile_options(freebsd PRIVATE
    -Wno-missing-prototypes
    -Wno-format-truncation
    $<$<COMPILE_LANGUAGE:C>:-Wnested-externs>
    $<$<COMPILE_LANGUAGE:C>:-Wstrict-prototypes>
    $<$<COMPILE_LANGUAGE:C>:-Wmissing-prototypes>
    $<$<COMPILE_LANGUAGE:C>:-Wno-pointer-sign>
    $<$<COMPILE_LANGUAGE:CXX>:-fno-permissive>
    $<$<COMPILE_LANGUAGE:C>:-nostdinc>
    -Wpointer-arith
    -Wno-inline
    -Wno-strict-aliasing
    -Wno-maybe-uninitialized
    -Wmissing-include-dirs
    -Wno-unused-but-set-variable
    -Wno-address-of-packed-member
    -finline-limit=8000
    -fdiagnostics-show-option
    -fno-builtin
    -Wno-cast-qual
    -Wno-stringop-overread
    -Wno-stringop-overflow
    -Wno-format
    -Wno-dangling-pointer
    -Wno-incompatible-pointer-types
)

target_compile_definitions(freebsd PRIVATE
        CONFIG_LAZYBSD=1
        INET
        INET6
        TCPHPTS
        __FreeBSD__
        _KERNEL
        HAVE_KERNEL_OPTION_HEADERS
)

target_include_directories(freebsd PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/include/opt
    ${BSD_SOURCE_DIR}/sys/
    ${BSD_SOURCE_DIR}/sys/amd64/include/
    ${BSD_SOURCE_DIR}/sys/contrib/ck/include
)

include_directories(${CMAKE_SOURCE_DIR}/bsd/src/freebsd/sys)
include_directories(${CMAKE_SOURCE_DIR}/bsd/src/freebsd/sys/sys)
include_directories(${CMAKE_BINARY_DIR}/bsd/include)
include_directories(${CMAKE_SOURCE_DIR}/bsd/lib)

# 生成文件
add_custom_target(freebsd_generate
    COMMAND bash ${CMAKE_SOURCE_DIR}/script/freebsd_generate.sh ${BSD_SOURCE_DIR} >> /dev/null
    VERBATIM
)

# 设定最终依赖文件
add_dependencies(freebsd freebsd_generate)
